Add militao info

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <div class="col-2">
           <img class="ply" src="https://www.realmadrid.com/img/vertical_380px/militao_380x501_20210826062825.jpg" alt="">
           <ul>
-            <li>Name:</li>
-            <li>Age:</li>
-            <li>Post:</li>
+            <li>Name:Eder militao</li>
+            <li>Age:25</li>
+            <li>Post:CB</li>
           </ul>
         </div>
         <div class="col-2">
